# aviator-bot

./: .replit  README.md  api.py  bot.py  browser-extension-workplan  data.csv  diagram.md  main.py  ml-keras.py  pyproject.toml  recreate.sh  replit.nix
